force-app/main/default/objects/Active_Member_Month__c/Active_Member_Month__c.object-meta.xml
<CustomObject>
    <description
  >Durable membership rollup: one row per active member per month (the member Contacts whose Membership Opportunity covered that month), written by ActiveMemberRollupBatch. Record count per month = active members; backs the Active Members Per Month chart and its per-member drill.</description>
    <label>Active Member Month</label>
    <nameField>
        <displayFormat>AMM-{0000}</displayFormat>
        <label>Active Member Month Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Active Member Months</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>