force-app/main/default/objects/Active_Member_Month__c/fields/Calculated_On__c.field-meta.xml
<CustomField>
    <fullName>Calculated_On__c</fullName>
    <description
  >When ActiveMemberRollupBatch last (re)computed this member-month row. Shows freshness.</description>
    <label>Calculated On</label>
    <type>DateTime</type>
</CustomField>