force-app/main/default/objects/Active_Member_Month__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The active member (Contact). SetNull so the row survives if the Contact is later deleted; Member_Name__c preserves the identity.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Active Member Months</relationshipLabel>
    <relationshipName>Active_Member_Months</relationshipName>
    <type>Lookup</type>
</CustomField>