force-app/main/default/objects/Active_Member_Month__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description
  >Member's first name (login User's FirstName, falling back to Contact's). Feeds the clickable Member (first name) link in the drill.</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>