force-app/main/default/objects/Active_Member_Month__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description
  >Member's last name (login User's LastName, falling back to Contact's). The plain, sortable Last Name column in the drill.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>