force-app/main/default/objects/Active_Member_Month__c/fields/Member_Link__c.field-meta.xml
<CustomField>
    <fullName>Member_Link__c</fullName>
    <description
  >The member's name (the login-User name, consistent with Monthly New Users) rendered as a click-through link to their Contact record. Used as the member column in the Active Members Per Month drill.</description>
    <formula>HYPERLINK("/" &amp; Contact__c, Member_Name__c, "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Member</label>
    <type>Text</type>
</CustomField>