force-app/main/default/objects/Active_Member_Month__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <description
  >Denormalized member name, so the row is self-describing if the Contact is later deleted. Used as the drill display.</description>
    <label>Member Name</label>
    <length>121</length>
    <required>true</required>
    <type>Text</type>
</CustomField>