force-app/main/default/objects/Active_Member_Month__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description
  >First day of the calendar month. The report's date grouping for the line chart.</description>
    <label>Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>